# TapisCLICICLE
## 0.0.60
### 6/15/23
### Changes
* added Tapis federated authentication, and device code authentication grant types to allow for more flexible access to Tapis resources. Full revamp of the whole authentication workflow to achieve this
* overhaul of user interface and command entry to provide better interactivity with commands that previously required config files to execute properly
* added forms to allow easier input for complex datatypes when creating and updating tapis services like systems.
* More effective command line argument validation to sanitize data input
overhaul of files and systems to grant user access to additional tapis resources (WIP). Files and systems strive to emulate linux bash command line, using commands like cd and ls.
* support for tapis postits added
  
### Planned Changes
* upgrade app commands and eventually implement intuitive job submission
* refactor help generation code

## 0.0.70
### 6/15/23
### Changes
* added better positional support
* fixed command parsing and validation server side
* improved login UX with suggestions for auth type and tenant uri
* improved help menus
* added jobs commands
* fixed data formatters to be more flexible
  
### Planned Changes
* add improved config file support for tapis resources

## 0.0.80
### 6/15/23
### Changes
* much improved UX for deeply nested forms for operations like system creation.
* Fixed a minor issue with the 'exit' command
* improved support for jobs
  
### Planned Changes
* currently jobs only supported on tacc systems. will add better support for other icicle tenants later